vfr/grammar.js
    source_file: ($) =>
      repeat(choice($.formset_statement, $.typedef_definition, $._directive, $.statement, $.conditional_statement)),

    // --- formset: fields are comma-terminated with no semicolon; the
    // body (varstore/form/... statements) follows directly, closed by
    // `endformset;`. ------------------------------------------------
    formset_statement: ($) =>
      seq(
        "formset",
        // Per spec (2.4), every formset header field is `key = value`
        // (guid/title/help/classguid/class/subclass) -- never a bare
        // field. Critical: if a bare `$.field` alternative were allowed
        // here too, it would greedily consume the *body*'s first
        // statement keyword (e.g. `varstore`) as "just one more header
        // field" before backtracking could kick in, since both are
        // equally valid bare identifiers at that position.
        repeat(seq($.key_value_pair, ",")),
        repeat(choice($.statement, $.conditional_statement)),
        "endformset",
        ";",
      ),

    // A generic struct/union field-list typedef, e.g.
    // `typedef struct { UINT8 mField1; } MyIfrNVData;`. Field types/names
    // are just bare words -- not modeled member-by-member, since the
    // grammar's job here is recognizing the construct for highlighting,
    // not validating C struct syntax.
    statement: ($) =>
      seq(
        field("keyword", $.compound_word),
        repeat(choice($.key_value_pair, $.conditional_statement, $.statement, $.function_call, $.field, ",")),
        choice(";", seq(field("end_keyword", $.compound_word), ";")),
      ),

    // `suppressif`/`disableif`/`grayoutif`/`inconsistentif`/`nosubmitif`/
    // `warningif` take a real boolean expression rather than comma fields
    // (spec 2.9, 2.11.6.1.1-7, 2.11.7.2-4). Two shapes exist in real files:
    // form/formset-level (`disableif expr; body* endif;`, trailing `;` on
    // both the condition and `endif`) and question-level, embedded
    // directly among an enclosing statement's comma fields (e.g. inside
    // `checkbox ... ,`), which take optional leading `prompt = ..., timeout
    // = ...,` fields and close on a bare `endif` with no trailing `;`.
    // Both trailing terminators are modeled as optional to cover both
    // shapes with one rule, consistent with this grammar's
    // highlighting-focused (not full-validation) scope.
    conditional_statement: ($) =>
      seq(
        field(
          "keyword",
          choice("suppressif", "disableif", "grayoutif", "inconsistentif", "nosubmitif", "warningif"),
        ),
        repeat(seq($.key_value_pair, ",")),
        field("condition", $._expression),
        optional(";"),
        repeat(choice($.statement, $.conditional_statement)),
        "endif",
        optional(";"),
      ),

    // The key is `$.field` (not `$.identifier`) on purpose -- see .fdf's
    // `key_value_pair` comment: `identifier` is a *separate* token type
    // that overlaps almost entirely with the plain-word half of
    // `compound_word`, and offering both as competing token types at the
    // same position is a genuine lexer-level tie tree-sitter resolves
    // *before* looking ahead for the `=` that would actually disambiguate
    // them, producing hard parse errors on ordinary lines like
    // `guid = SOME_GUID,`.
    key_value_pair: ($) => seq(field("key", $.field), "=", field("value", $._expression)),

    // --- Preprocessor (a real C preprocessor pass runs before the VFR
    // compiler proper) --------------------------------------------------

    _directive: ($) =>
      choice($.include_directive, $.define_directive, $.ifdef_directive, $.ifndef_directive, $.else_directive, $.endif_directive, $.pragma_directive),

    // Path is either a quoted string (`"NVDataStruc.h"`) or an
    // angle-bracket system path (`<Uefi/UefiMultiPhase.h>`), same as C.
    include_directive: ($) => seq("#include", field("path", choice($.field, $.system_path))),

    _expression: ($) =>
      choice(
        $.field,
        $.function_call,
        $.parenthesized_expression,
        $.unary_expression,
        $.ideqval_expression,
        $.ideqvallist_expression,
        $.map_expression,
        $.binary_expression,
        $.ternary_expression,
      ),

    ideqval_expression: ($) =>
      prec(11, seq(field("operator", choice("ideqval", "ideqid")), field("operand", $._expression))),

    // `ideqvallist` is its own shape (spec 2.12.11.4.4): unlike
    // `ideqval`/`ideqid`, the right-hand side is a *space-separated list*
    // of numbers, not a single comparison operand, e.g. `ideqvallist
    // MyData.Data1 == 1 3 5 7`. Real files also pass symbolic macro names
    // instead of literal numbers (e.g. `== TPM_DEVICE_NULL
    // TPM_DEVICE_1_2`), so the list allows identifier-shaped words too.
    // `values` is a single token (a space-separated run of words/numbers),
    // not `repeat($.field)` -- the latter, being a separator-less
    // repetition of the same bare-word token used virtually everywhere
    // else in this grammar (`$.field`/`compound_word`), created unbounded
    // ambiguity: since `_expression` (and so `ideqvallist_expression`) is
    // reachable from nearly every position in the grammar, GLR had no
    // local way to decide where the values list ends, and the ambiguity
    // compounded across the rest of the document instead of staying local
    // -- real files with `ideqvallist` saw the *entire* surrounding
    // file's tree collapse into one flat top-level ERROR. A single greedy
    // token sidesteps this the same way `.uni`'s `string` token does; it's
    // safe to be this greedy because every real usage's list is followed
    // directly by `;` (never chained into `AND`/`OR` without one), so the
    // token has an unambiguous place to stop.
    ideqvallist_expression: ($) =>
      prec(11, seq("ideqvallist", field("field", $.field), "==", field("values", $.value_list))),

    value_list: (_$) => {
      const item = /[A-Za-z_][A-Za-z0-9_]*|0[xX][0-9A-Fa-f]+|[0-9]+/;
      return token(seq(item, repeat(seq(/[ \t]+/, item))));
    },

    // `name` is `$.compound_word` (not `$.identifier`) for the same
    // lexer-tie reason as `key_value_pair.key` above -- `field` (which
    // wraps `compound_word`) is also a valid `_expression` alternative, so
    // a separate `identifier` token competing at the same position let
    // tree-sitter commit to "bare field" before it could look ahead for
    // the `(` that actually distinguishes a call, e.g.
    // `STRING_TOKEN(STR_ENTRY_TITLE)` parsed as field `STRING_TOKEN`
    // followed by a stray, unattached `(STR_ENTRY_TITLE)`.
    // Arguments are usually plain expressions, but a few built-ins take
    // `key = value` arguments (e.g. `questionrefval(devicepath =
    // STRING_TOKEN(...), guid = ..., QuestionId)`, per spec 2.12.11.6.3).
    function_call: ($) =>
      seq(
        field("name", $.compound_word),
        "(",
        optional(
          seq(
            field("argument", choice($.key_value_pair, $._expression)),
            repeat(seq(",", field("argument", choice($.key_value_pair, $._expression)))),
          ),
        ),
        ")",
      ),

    binary_expression: ($) =>
      choice(
        prec.left(10, seq(field("left", $._expression), field("operator", choice("*", "/", "%")), field("right", $._expression))),
        prec.left(9, seq(field("left", $._expression), field("operator", choice("+", "-")), field("right", $._expression))),
        prec.left(8, seq(field("left", $._expression), field("operator", choice("<<", ">>")), field("right", $._expression))),
        prec.left(7, seq(field("left", $._expression), field("operator", choice("==", "!=", "EQ", "NE", "<=", ">=", "<", ">", "LE", "GE", "LT", "GT")), field("right", $._expression))),
        prec.left(6, seq(field("left", $._expression), field("operator", "&"), field("right", $._expression))),
        prec.left(5, seq(field("left", $._expression), field("operator", "^"), field("right", $._expression))),
        prec.left(4, seq(field("left", $._expression), field("operator", "|"), field("right", $._expression))),
        prec.left(3, seq(field("left", $._expression), field("operator", choice("AND", "and", "&&")), field("right", $._expression))),
        prec.left(2, seq(field("left", $._expression), field("operator", choice("XOR", "xor")), field("right", $._expression))),
        prec.left(1, seq(field("left", $._expression), field("operator", choice("OR", "or", "||")), field("right", $._expression))),
      ),

    field: ($) => choice($.array, $.string, $.date, $.time, $.compound_word),

    // The plain-word alternative allows dotted member and bracketed
    // array-index suffixes (in any combination) for qualified varstore
    // references, e.g. `VARIABLE_CLEANUP_DATA.SelectAll`,
    // `MyNameValueVar[0]`, `data.OrderedList[0]` (real usage: `varid =
    // VarStoreName.FieldName` / `VarStoreName[Index]`).
    compound_word: ($) =>
      token(
        /[A-Za-z_][A-Za-z0-9_]*(\.[A-Za-z_][A-Za-z0-9_]*|\[[0-9]+\])*|0[xX][0-9A-Fa-f]+|[0-9]+/,
      ),

    array: ($) => seq("{", optional(seq($.field, repeat(seq(",", $.field)))), "}"),

    // `2004/1/1` (date) and `15:33:33` (time) default-value literals.
    date: (_$) => token(/[0-9]+\/[0-9]+\/[0-9]+/),

    string: (_$) => token(/L?"[^"\n]*"/),

    comment: (_$) => token(choice(/\/\/[^\n]*/, /\/\*[^*]*\*+([^/*][^*]*\*+)*\//)),
  },
});
